# DataGeneration

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data_generation/: app.py
data_generation/constants/: COMPOUND_LOWER.txt  COMPOUND_UPPER.txt  ISOLATION_LOWER.txt  ISOLATION_UPPER.txt  constant.py
data_generation/models/: models.py
data_generation/services/: file_comprehension.py  generation.py
http/: post.http
tests/: test_app.py
